k8s/main-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: main-mfe
  labels:
    app: main-mfe
    tier: frontend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: main-mfe
  template:
    metadata:
      labels:
        app: main-mfe
        tier: frontend
    spec:
      containers:
        - name: main
          image: asia-southeast1-docker.pkg.dev/testgke-482412/ecommerce-images/main:latest
          ports:
            - containerPort: 80
              name: http
          resources:
            requests:
              memory: '128Mi'
              cpu: '100m'
            limits:
              memory: '256Mi'
              cpu: '200m'
          livenessProbe:
            httpGet:
              path: /health
              port: 80
            initialDelaySeconds: 5
            periodSeconds: 30
            timeoutSeconds: 3
            failureThreshold: 3
          readinessProbe:
            httpGet:
              path: /health
              port: 80
            initialDelaySeconds: 5
            periodSeconds: 10
            timeoutSeconds: 3
            failureThreshold: 3
